force-app/main/default/objects/IT_Plan__c/IT_Plan__c.object-meta.xml
<CustomObject>
    <label>Plan</label>
    <nameField>
        <label>Plan Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Plans</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>