force-app/main/default/objects/IT_Plan__c/fields/IT_Age_Groups__c.field-meta.xml
<CustomField>
    <fullName>IT_Age_Groups__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Age Groups</label>
    <type>Checkbox</type>
</CustomField>