force-app/main/default/objects/IT_Plan__c/fields/IT_Age_Groups_Description__c.field-meta.xml
<CustomField>
    <fullName>IT_Age_Groups_Description__c</fullName>
    <label>Age Groups Description</label>
    <type>TextArea</type>
</CustomField>