force-app/main/default/objects/IT_Plan__c/fields/IT_FB01__c.field-meta.xml
<CustomField>
    <fullName>IT_FB01__c</fullName>
    <defaultValue>false</defaultValue>
    <label>FB01</label>
    <type>Checkbox</type>
</CustomField>