force-app/main/default/objects/IT_Plan__c/fields/IT_Number_of_Founding_Sources__c.field-meta.xml
<CustomField>
    <fullName>IT_Number_of_Founding_Sources__c</fullName>
    <label>Number of Founding Sources</label>
    <summaryForeignKey>IT_Funding_Source__c.IT_Plan__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>