force-app/main/default/objects/IT_Plan__c/fields/IT_Payroll_Codes__c.field-meta.xml
<CustomField>
    <fullName>IT_Payroll_Codes__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Payroll Codes</label>
    <type>Checkbox</type>
</CustomField>