force-app/main/default/objects/IT_Plan__c/fields/IT_Plan_End_Date__c.field-meta.xml
<CustomField>
    <fullName>IT_Plan_End_Date__c</fullName>
    <label>Plan End Date</label>
    <type>Date</type>
</CustomField>