force-app/main/default/objects/IT_Plan__c/fields/IT_Planned_Working_Date__c.field-meta.xml
<CustomField>
    <fullName>IT_Planned_Working_Date__c</fullName>
    <label>Planned Working Date</label>
    <type>Date</type>
</CustomField>