force-app/main/default/objects/IT_Plan__c/fields/IT_Policy__c.field-meta.xml
<CustomField>
    <fullName>IT_Policy__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Policy</label>
    <type>Checkbox</type>
</CustomField>