force-app/main/default/objects/IT_Plan__c/fields/IT_Provisioning_Case__c.field-meta.xml
<CustomField>
    <fullName>IT_Provisioning_Case__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Provisioning Case</label>
    <referenceTo>Case</referenceTo>
    <relationshipLabel>Piani</relationshipLabel>
    <relationshipName>Plans</relationshipName>
    <type>Lookup</type>
</CustomField>