force-app/main/default/objects/IT_Plan__c/fields/IT_TW01__c.field-meta.xml
<CustomField>
    <fullName>IT_TW01__c</fullName>
    <defaultValue>false</defaultValue>
    <label>TW01</label>
    <type>Checkbox</type>
</CustomField>