force-app/main/default/objects/IT_Plan__c/fields/IT_TW02__c.field-meta.xml
<CustomField>
    <fullName>IT_TW02__c</fullName>
    <defaultValue>false</defaultValue>
    <label>TW02</label>
    <type>Checkbox</type>
</CustomField>