force-app/main/default/objects/IT_Plan__c/fields/IT_TW03__c.field-meta.xml
<CustomField>
    <fullName>IT_TW03__c</fullName>
    <defaultValue>false</defaultValue>
    <label>TW03</label>
    <type>Checkbox</type>
</CustomField>