force-app/main/default/objects/IT_Plan__c/fields/IT_Welfare_Project__c.field-meta.xml
<CustomField>
    <fullName>IT_Welfare_Project__c</fullName>
    <label>Welfare Project</label>
    <referenceTo>IT_Welfare_Project__c</referenceTo>
    <relationshipLabel>Plans</relationshipLabel>
    <relationshipName>Plans</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>