force-app/main/default/objects/IT_Plan__c/validationRules/VRIT01_Plan_End_Date_and_Project_End_Dat.validationRule-meta.xml
<ValidationRule>
    <fullName>VRIT01_Plan_End_Date_and_Project_End_Dat</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
$User.ER_BypassVR__c = False,
ISPICKVAL($User.ER_Business_Unit__c , &#39;IT&#39;),

IT_Plan_End_Date__c  &gt;  IT_Welfare_Project__r.IT_Project_End_Date__c)</errorConditionFormula>
    <errorDisplayField>IT_Plan_End_Date__c</errorDisplayField>
    <errorMessage>Plan End Date can&#39;t be next Project End Date</errorMessage>
</ValidationRule>