force-app/main/default/objects/IT_Plan__c/validationRules/VRIT02_Plan_End_Date_and_Project_Start_D.validationRule-meta.xml
<ValidationRule>
    <fullName>VRIT02_Plan_End_Date_and_Project_Start_D</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
$User.ER_BypassVR__c = False,
ISPICKVAL($User.ER_Business_Unit__c , &#39;IT&#39;),

IT_Plan_End_Date__c  &lt;  IT_Welfare_Project__r.IT_Project_Start_Date__c)</errorConditionFormula>
    <errorDisplayField>IT_Plan_End_Date__c</errorDisplayField>
    <errorMessage>Plan End Date can&#39;t be before Project Start Date</errorMessage>
</ValidationRule>