force-app/main/default/objects/IT_Plan__c/validationRules/VRIT03_Plan_Start_Date_and_Project_Start.validationRule-meta.xml
<ValidationRule>
    <fullName>VRIT03_Plan_Start_Date_and_Project_Start</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
$User.ER_BypassVR__c = False,
ISPICKVAL($User.ER_Business_Unit__c , &#39;IT&#39;),

IT_Welfare_Project__r.IT_Project_Start_Date__c   &gt;   IT_Plan_Start_Date__c)</errorConditionFormula>
    <errorDisplayField>IT_Plan_Start_Date__c</errorDisplayField>
    <errorMessage>Plan Start Date can&#39;t be before Project Start Date</errorMessage>
</ValidationRule>