force-app/main/default/objects/IT_Plan__c/validationRules/VRIT04_Plan_Start_Date_and_Project_End.validationRule-meta.xml
<ValidationRule>
    <fullName>VRIT04_Plan_Start_Date_and_Project_End</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
$User.ER_BypassVR__c = False,
ISPICKVAL($User.ER_Business_Unit__c , &#39;IT&#39;),

IT_Welfare_Project__r.IT_Project_End_Date__c  &lt;  IT_Plan_Start_Date__c)</errorConditionFormula>
    <errorDisplayField>IT_Plan_Start_Date__c</errorDisplayField>
    <errorMessage>Plan Start Date can&#39;t be next Project End Date</errorMessage>
</ValidationRule>