force-app/main/default/objects/IT_Plan__c/validationRules/VRIT05_Plan_Start_Date_and_Plan_End.validationRule-meta.xml
<ValidationRule>
    <fullName>VRIT05_Plan_Start_Date_and_Plan_End</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
$User.ER_BypassVR__c = False,
ISPICKVAL($User.ER_Business_Unit__c , &#39;IT&#39;),

IT_Plan_End_Date__c  &lt;  IT_Plan_Start_Date__c)</errorConditionFormula>
    <errorDisplayField>IT_Plan_Start_Date__c</errorDisplayField>
    <errorMessage>Plan Start Date can&#39;t be next Plan End Date</errorMessage>
</ValidationRule>