force-app/main/default/objects/IT_Plan__c/validationRules/VRIT06_IT_Planned_Working_Date_Required.validationRule-meta.xml
<ValidationRule>
    <fullName>VRIT06_IT_Planned_Working_Date_Required</fullName>
    <active>true</active>
    <errorConditionFormula>AND (
$User.ER_BypassVR__c = False,
ISPICKVAL($User.ER_Business_Unit__c , &#39;IT&#39;),
$Profile.Name = &#39;IT Provisioning Profile&#39;,
IT_Planned_Working_Date__c = null )</errorConditionFormula>
    <errorDisplayField>IT_Planned_Working_Date__c</errorDisplayField>
    <errorMessage>Field Planned Working Date is mandatory</errorMessage>
</ValidationRule>