force-app/main/default/objects/IT_Plan__c/validationRules/VRIT07_FB01_TW01.validationRule-meta.xml
<ValidationRule>
    <fullName>VRIT07_FB01_TW01</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
$User.ER_BypassVR__c = False,
ISPICKVAL($User.ER_Business_Unit__c , &#39;IT&#39;),

OR(
AND( IT_FB01__c ,
IT_TW01__c ),
AND( IT_FB02__c ,
IT_TW04__c )))</errorConditionFormula>
    <errorMessage>The fields FB01 and TW01 or FB02 and TW04 cannot be selected both</errorMessage>
</ValidationRule>