force-app/main/default/objects/IT_Plan__c/listViews/PIANI_RICARDO.listView-meta.xml
<ListView>
    <fullName>PIANI_RICARDO</fullName>
    <columns>NAME</columns>
    <filterScope>Mine</filterScope>
    <label>PIANI - RICARDO</label>
</ListView>